test/reverseClassicalMovedArg1.slq

def square(moved x:!ℝ)⇒x^2;

def main(){
	x:=2;
	square(x):=4; /// error
}
